Fix wrong visibility state on meeting minutes

--- a/indico/web/client/styles/ckeditor.scss
+++ b/indico/web/client/styles/ckeditor.scss
@@ -57,4 +57,8 @@
   .image-style-side {
     max-width: 50%;
   }
+
+  &.weak-hidden {
+    display: none;
+  }
 }
